--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Reysite</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<html class = 'grey lighten-4'>
+<head>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  
+    <nav>
+      <div class="nav-wrapper hoverable">
+        <a href="http://reycholmgren.herokuapp.com/" class="brand-logo center ">Rey Holmgren</a>
+        
+        <ul id="nav-mobile" class="left ">
+          <li><a href="/resume/view" >Resume</a></li>
+        </ul>
+
+        <ul id="nav-mobile" class="right ">
+          <li><a href="/letter/view">Why Rey?</a></li>
+        </ul>
+      </div>
+    </nav>
+  
+
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+
+  <%= csrf_meta_tags %>
+
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="footer, address, phone, icons" />
+
+
+  
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
+
+
+</head>
+
+
+   
 
   <body>
-    <%= yield %>
+<%= yield %>
+
+
+
   </body>
 </html>
