--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -32,7 +32,7 @@
 
     <nav>
       <div class="nav-wrapper hoverable">
-        <a href="http://reycholmgren.herokuapp.com/" class="brand-logo center ">Rey Holmgren</a>
+        <a href="http://rey-holmgren.herokuapp.com/" class="brand-logo center ">Rey Holmgren</a>
 
         <ul id="nav-mobile" class="left ">
           <li><a href="/resume/view" >Resume</a></li>
