--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,11 @@
 <html class = 'grey lighten-4'>
 <head>
 
-  
+
     <nav>
       <div class="nav-wrapper hoverable">
-        <a href="http://reycholmgren.herokuapp.com/" class="brand-logo center ">Rey Holmgren</a>
-        
+        <a href="http://rey-holmgren.herokuapp.com/" class="brand-logo center ">Rey Holmgren</a>
+
         <ul id="nav-mobile" class="left ">
           <li><a href="/resume/view" >Resume</a></li>
         </ul>
@@ -16,7 +16,7 @@
         </ul>
       </div>
     </nav>
-  
+
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -32,7 +32,7 @@
   <meta name="keywords" content="footer, address, phone, icons" />
 
 
-  
+
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
 
@@ -40,7 +40,7 @@
 </head>
 
 
-   
+
 
   <body>
 <%= yield %>
