--- a/app/views/resume/extra_resumestuff.rhtml
+++ b/app/views/resume/extra_resumestuff.rhtml
@@ -7,7 +7,7 @@
           <div class="footer-left">
 
             <p class="footer-links">
-              <a href="http://reycholmgren.herokuapp.com/">Home</a>
+              <a href="http://rey-holmgren.herokuapp.com/">Home</a>
               ·
               <a href="/letter/view">Hey. Hey Buzzfeed. HEY BUZZFEED!</a>
               ·
@@ -34,7 +34,7 @@
 
           <div class="footer-right">
 
-            
+
 
             <div class="footer-icons">
 
@@ -47,5 +47,5 @@
             </div>
 
           </div>
-          
+
     </footer>
