--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -130,7 +130,7 @@
           <div class="footer-left">
 
             <p class="footer-links">
-              <a href="http://reycholmgren.herokuapp.com/">Home</a>
+              <a href="http://rey-holmgren.herokuapp.com/">Home</a>
               ·
               <a href="/letter/view">Who am I?</a>
               ·
