updated resume and letter

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -14,8 +14,8 @@
       <li>
         <%= image_tag 'hobbiton.jpg'%>
         <div class="caption right-align">
-          <h3>Yeah, but who are you <strong>really?</strong></h3>
-          <h5 class="light grey-text text-lighten-3"><strong>Your next junior QA engineer.
+          <h3>But wait, there's more! <strong>really?</strong></h3>
+          <h5 class="light grey-text text-lighten-3"><strong>I'm also experienced in fullstack web development with a focus on Ruby on Rails, as well as UI/UX.
           </strong> </h5>
         </div>
       </li>
@@ -25,7 +25,7 @@
         <br>
 
           <h3><strong>Who are you?!</strong></h3>
-          <h5 class="light grey-text text-lighten-2"><strong>I'm Rey, a junior automated QA engineer with fullstack web development experience based in Salt Lake City, Utah.</strong></h5>
+          <h5 class="light grey-text text-lighten-2"><strong>I'm Rey, an ISTQB certified CTFL junior automation QA engineer with fullstack web development experience based in Salt Lake City, Utah.</strong></h5>
         </div>
       </li>
     </ul>
