--- a/app/views/letter/view.html.erb
+++ b/app/views/letter/view.html.erb
@@ -18,14 +18,11 @@
     <br>
     <p>
 
-      I can't remember a time when I didn't want to work in software. Even as a kid, before I knew the job title, I knew I wanted to be the person that made the cool things happen on the computer. It took me a while, but I'm finally one of those people. And I want to be one of those people for you.
+      I can't remember a time when I didn't want to work in software. Even as a kid, before I knew the job title, I knew I wanted to be the person that made the cool things on the computer. It took me a while, but I'm finally one of those people. And I want to be one of those people for you.
 
     <br>
     <br>
-      My education in psychology and marketing created a really strong focus on human factors, which has given me a unique perspective on development. I'm able to look at testing and troubleshooting from a psychological point of view, which is unbelievably useful in helping to build a natural and instinctive flow for sites I work on.
-    <br>
-    <br>
-    My time in coding bootcamps at the University of Utah and Devmountain have t
+      My education in psychology and marketing created a really strong focus on human factors, which has given me a unique perspective on development. I'm able to look at testing and troubleshooting from a psychological point of view, which is unbelievably useful in helping to build a natural and instinctive flow for sites I work on. My time in coding bootcamps at the University of Utah and Devmountain have taught me how to learn quickly and efficiently,
     <br>
     <br>
     I also have excellent references available for you, millions of people ready to scream my praises.
