--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -32,7 +32,7 @@
 
     <div id="page-wrap">
 
-        <%= image_tag "my_face.jpg", title: "Oh hey, it's me!", class: "valign center-block circle hoverable"%>
+        <%= image_tag "headshot.jpg", title: "Oh hey, it's me!", class: "valign center-block circle hoverable"%>
         <div id="contact-info" class="vcard">
 
             <div class= "valign center">
@@ -57,6 +57,10 @@
 
 </strong></p>
             </dd>
+            <dd>
+            <h2>ISTQB </h2>
+            <p><strong>ISTQB CTFL Certified</p>
+        </dd>
             <dd>
                 <h2>University of Utah - Salt Lake City, Utah</h2>
                 <p><strong> Fullstack Web Development at Devpoint Labs</strong></p>
