--- a/app/views/letter/view.html.erb
+++ b/app/views/letter/view.html.erb
@@ -22,7 +22,7 @@
 
     <br>
     <br>
-      My education in psychology and marketing created a really strong focus on human factors, which has given me a unique perspective on development. I'm able to look at testing and troubleshooting from a psychological point of view, which is unbelievably useful in helping to build a natural and instinctive flow for sites I work on. My time in coding bootcamps at the University of Utah and Devmountain have taught me how to learn quickly and efficiently,
+      My education in psychology and marketing created a strong focus on human factors, which has given me a unique perspective on development. I'm able to look at testing and troubleshooting from a psychological point of view, which is unbelievably useful in helping to build a natural and instinctive flow for sites I work on. My time in coding bootcamps at the University of Utah and Devmountain have taught me how to learn quickly and efficiently.
     <br>
     <br>
     I also have excellent references available for you, millions of people ready to scream my praises.
@@ -36,7 +36,7 @@
     <br>
     <br/>
     <br>
-      I love testing software, and want nothing more than to spend the rest of my life doing so. It's the most frustrating, absorbing, fascinating, and rewarding thing I've ever done. You know when you start reading a really great book at noon and the next time you look up it's dark? That's software development for me. I'm happy even just to sit and work on errors. The satisfaction of figuring out a bug is second to none.
+      I love testing software, and want nothing more than to spend the rest of my life doing so. It's the most frustrating, absorbing, fascinating, and rewarding thing I've ever done. You know when you start reading a great book at noon and the next time you look up it's dark? That's software development for me. I'm happy even just to sit and work on errors. The satisfaction of figuring out a bug is second to none.
       <br>
       <br>
 
@@ -46,7 +46,7 @@
       But more importantly than meeting the requirements, this is something I really want to do. I'm incredibly passionate about technology, and to be able to be a part of a great company and do what I love? Literal dream job. And at the end of the day, no one will do a better job than the person who truly wants to be doing the job.
       <br>
       <br>
-      So with all that said, I really hope you’ll consider me. I look forward to hearing from you!
+      So with all that said, I hope you’ll consider me. I look forward to hearing from you!
       <br>
 
       And if you're wondering if any of this has been exaggerated, well...
