contact and about page added

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -14,7 +14,7 @@
       <li>
         <%= image_tag 'hobbiton.jpg'%>
         <div class="caption right-align">
-          <h3>But wait, there's more! <strong>really?</strong></h3>
+          <h3>But wait, there's more!</h3>
           <h5 class="light grey-text text-lighten-3"><strong>I'm also experienced in fullstack web development with a focus on Ruby on Rails, as well as UI/UX.
           </strong> </h5>
         </div>
@@ -24,7 +24,7 @@
         <div class="caption left-align">
         <br>
 
-          <h3><strong>Who are you?!</strong></h3>
+          <h3><strong>Who are you?</strong></h3>
           <h5 class="light grey-text text-lighten-2"><strong>I'm Rey, an ISTQB certified CTFL junior automation QA engineer with fullstack web development experience based in Salt Lake City, Utah.</strong></h5>
         </div>
       </li>
@@ -39,7 +39,7 @@
         </ul>
 
         <ul id="nav-mobile" class="right ">
-          <li><a href="/letter/view"> Why Rey?</a></li>
+          <li><a href="/letter/view"> About </a></li>
         </ul>
       </div>
     </nav>
