--- a/app/views/letter/view.html.erb
+++ b/app/views/letter/view.html.erb
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h1 class= "center">Hello. It's me.</h1>
-<title>Hello. It's Rey.</title>
+<h1 class= "center">About</h1>
 <head>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
@@ -9,53 +8,34 @@
 <title>Hey. Hire me.</title>
 </head>
 <body>
-  <div class="container">
-    <p> Hi! Let me introduce myself...</p>
-    <br>
-    <div class= "center">
-    <%= image_tag 'im_rey.gif', title: "I am, it's true." %>
-    </div>
-    <br>
-    <p>
 
-      I can't remember a time when I didn't want to work in software. Even as a kid, before I knew the job title, I knew I wanted to be the person that made the cool things on the computer. It took me a while, but I'm finally one of those people. And I want to be one of those people for you.
-
-    <br>
-    <br>
-      My education in psychology and marketing created a strong focus on human factors, which has given me a unique perspective on development. I'm able to look at testing and troubleshooting from a psychological point of view, which is unbelievably useful in helping to build a natural and instinctive flow for sites I work on. My time in coding bootcamps at the University of Utah and Devmountain have taught me how to learn quickly and efficiently.
-    <br>
-    <br>
-    I also have excellent references available for you, millions of people ready to scream my praises.
-    <br>
-      <div class= "center">
-      <%= image_tag 'loverey.gif', title: "Hey thanks, Gwen.", class: "left-align"%>
-
-      <%= image_tag 'suchproud.gif', title: "Oh, stop it, you.", class: "right-align"%>
-      </div>
-
-    <br>
-    <br/>
-    <br>
-      I love testing software, and want nothing more than to spend the rest of my life doing so. It's the most frustrating, absorbing, fascinating, and rewarding thing I've ever done. You know when you start reading a great book at noon and the next time you look up it's dark? That's software development for me. I'm happy even just to sit and work on errors. The satisfaction of figuring out a bug is second to none.
-      <br>
-      <br>
-
-      <strong>TL;DR: </strong>I'm a great junior QA engineer, with a whole lot of love for the work.
-      <br>
-      <br>
-      But more importantly than meeting the requirements, this is something I really want to do. I'm incredibly passionate about technology, and to be able to be a part of a great company and do what I love? Literal dream job. And at the end of the day, no one will do a better job than the person who truly wants to be doing the job.
-      <br>
-      <br>
-      So with all that said, I hope you’ll consider me. I look forward to hearing from you!
-      <br>
-
-      And if you're wondering if any of this has been exaggerated, well...
-      <br>
-      <br>
-    <div class ='center'>
-      <%= image_tag 'allofit.gif', title: "I had to use all Star Wars gifs. I had to. The main character's name is Rey!" %>
+<div class="col s12 m7">
+<div class="card horizontal">
+  <div class="card-image">
+  <%= image_tag 'im_rey.gif', title: "I am, it's true." %>
+  </div>
+  <div class="card-stacked">
+    <div class="card-content">
+      <p>I've spent the last few years of my life focusing my energy on software engineering. I've done bootcamps, online classes, in person classes, and good old fashioned research into QA automation, fullstack development (Ruby on Rails), and UX/UI. After exploring each of these fields, I have found a passion and talent for QA, and can't wait to begin my career. 
+        <br></br>
+        In my spare time, you'll find me working in my garden, playing video games, reading, or traveling. 
+        </p>
     </div>
   </div>
+</div>
+</div>
+
+<br></br>
+<br></br>
+<br></br>
+
+<ul class="collection with-header">
+<li class="collection-header"><h4>Contact and Important Links</h4></li>
+<a href="https://github.com/Reyholmgren" target="_blank" class="collection-item">Github</a>
+<a href="https://www.linkedin.com/in/reyholmgren/" target="_blank" class="collection-item active">LinkedIn</a>
+<a href="mailto:rey.holmgren@gmail.com" class="collection-item">Rey.holmgren@gmail.com</a>
+<a href="https://twitter.com/EmeraldAvenger" target="_blank" class="collection-item">Twitter</a>
+</ul>
 
 
   </body>
