--- a/app/views/resume/stuffforresume.html
+++ b/app/views/resume/stuffforresume.html
@@ -10,7 +10,7 @@
       <li>
         <%= image_tag "slide2.jpg" %> 
         <div class="caption left-align">
-          <h3><strong>Who are you?!</strong></h3>
+          <h3><strong>Who are you?</strong></h3>
           <h5 class="light grey-text text-lighten-3"><strong>I'm Rey, a 25 year old software engineer currently based in Salt Lake City, Utah.</strong></h5>
         </div>
       </li>
