--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         </ul>
 
         <ul id="nav-mobile" class="right ">
-          <li><a href="/letter/view">Why Rey?</a></li>
+          <li><a href="/letter/view">About</a></li>
         </ul>
       </div>
     </nav>
