fixed active item

--- a/app/views/letter/view.html.erb
+++ b/app/views/letter/view.html.erb
@@ -32,7 +32,7 @@
 <ul class="collection with-header">
 <li class="collection-header"><h4>Contact and Important Links</h4></li>
 <a href="https://github.com/Reyholmgren" target="_blank" class="collection-item">Github</a>
-<a href="https://www.linkedin.com/in/reyholmgren/" target="_blank" class="collection-item active">LinkedIn</a>
+<a href="https://www.linkedin.com/in/reyholmgren/" target="_blank" class="collection-item">LinkedIn</a>
 <a href="mailto:rey.holmgren@gmail.com" class="collection-item">Rey.holmgren@gmail.com</a>
 <a href="https://twitter.com/EmeraldAvenger" target="_blank" class="collection-item">Twitter</a>
 </ul>
