--- a/app/views/letter/view.html.erb
+++ b/app/views/letter/view.html.erb
@@ -46,7 +46,7 @@
             <p class="footer-links">
               <a href="http://rey-holmgren.herokuapp.com/">Home</a>
               ·
-              <a href="/letter/view">Who am I?</a>
+              <a href="/letter/view">About</a>
               ·
               <a href="/resume/view">Resume</a>
               ·
