--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -89,13 +89,13 @@
 
             <dt>Experience</dt>
             <dd>
-              <h2>Canyons School District <span>IT Specialist - Sandy, UT - 2017-present</span></h2>
+              <h2>Canyons School District <span>IT Specialist - Sandy, UT - 2016-2018</span></h2>
               <ul>
-                  <li>  I provide first-level technical support to District staff and students on hardware and software. I also perform troubleshooting techniques over the phone, email, and in person. </li>
+                  <li>  I provided first-level technical support to District staff and students on hardware and software. I also performed troubleshooting techniques over the phone, email, and in person. </li>
                 </ul>
-                <h2>Arrey Works <span>Software Engineer - Salt Lake City, UT - 2016-present</span></h2>
+                <h2>Arrey Works <span>Software Engineer - Salt Lake City, UT - 2016-2018</span></h2>
                 <ul>
-                    <li>  We take on clients, both corporate and individual, and create full scale websites using mainly Ruby on Rails, Javascript, and HTML and CSS.</li>
+                    <li>  We took on clients, both corporate and individual, and created full scale websites using mainly Ruby on Rails, Javascript, and HTML and CSS.</li>
                 </ul>
                  <h2>Thumbtack <span>Correspondence Associate - Salt Lake City, UT - 2014-2016</span></h2>
                 <ul>
@@ -106,7 +106,7 @@
                     <li>  Twice a week I was mentored by junior and senior software engineers on both front and back end projects.</li>
                 </ul>
 
-                <h2>Salt Lake Optical <span>Systems Administrator - Salt Lake City, UT - 2011-2013</span></h2>
+                <h2>Salt Lake Optical <span>Systems Administrator - Salt Lake City, UT - 2011-2014</span></h2>
                 <ul>
                     <li>I handled all troubleshooting, computer set up, IT purchasing, software updating, system and security management, and management of all office Google accounts</li>
                 </ul>
