--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -139,7 +139,7 @@
               ·
               <a href="/resume/view">Resume</a>
               ·
-              <a href="https://www.youtube.com/watch?v=-crgQGdpZR0">Do it</a>
+              <a href="https://www.youtube.com/watch?v=-crgQGdpZR0" target="_blank">Do it</a>
             </p>
 
             <p class="footer-company-name">Rey Holmgren &copy; 2018</p>
