--- a/app/views/letter/view.html.erb
+++ b/app/views/letter/view.html.erb
@@ -50,7 +50,7 @@
               ·
               <a href="/resume/view">Resume</a>
               ·
-              <a href="https://www.youtube.com/watch?v=-crgQGdpZR0">Do it</a>
+              <a href="https://www.youtube.com/watch?v=-crgQGdpZR0" target="_blank">Do it</a>
 
             </p>
 
