--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -89,7 +89,7 @@
 
             <dt>Experience</dt>
             <dd>
-            <h2>Companion Corp <span>Junior Automation engineer - Salt Lake City, UT - 2017-present</span></h2>
+            <h2>Companion Corp <span>Jr Automation engineer - Salt Lake City, UT - 2017-present</span></h2>
             <ul>
                 <li> Junior Automation Engineer over multiple web apps for continuous integration and regression testing along with API and GUI automated testing. Utilize Python along with many testing tools, primarily Selenium, Appium, Bamboo, Jenkins, JIRA, Github, and Bitbucket. Optimize testing scripts to function at peak performance and maintain Bamboo servers. </li>
               </ul>               
