formatting fixes again

--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -82,7 +82,7 @@
 
             <dt>Skills</dt>
             <dd>
-                <p>Certified in A+ IT. Experienced in Python, Selenium, Appium, Bamboo, Jenkins, API testing, Ruby, Ruby on Rails, HTML, CSS, Elixir, Javascript, JIRA, Wordpress, OSX, Microsoft Office, Zendesk, Salesforce, and Casper JAMF. and UX Design.</p>
+                <p>Certified in A+ IT. Experienced in Python, Selenium, Appium, Bamboo, Jenkins, API testing, Ruby on Rails, HTML, CSS, Elixir, Javascript, JIRA, Wordpress, OSX, Microsoft Office, Zendesk, Salesforce, Casper JAMF, and UX Design.</p>
             </dd>
 
             <dd class="clear"></dd>
@@ -91,7 +91,7 @@
             <dd>
             <h2>Companion Corp <span>Jr Automation engineer - Salt Lake City, UT - 2017-present</span></h2>
             <ul>
-                <li> Junior Automation Engineer over multiple web apps for continuous integration and regression testing along with API and GUI automated testing. Utilize Python along with many testing tools, primarily Selenium, Appium, Bamboo, Jenkins, JIRA, Github, and Bitbucket. Optimize testing scripts to function at peak performance and maintain Bamboo servers. </li>
+                <li> Automation Engineer over multiple web apps for continuous integration and regression testing along with API and GUI automated testing. Utilize Python along with many testing tools, primarily Selenium, Appium, Bamboo, Jenkins, JIRA, Github, and Bitbucket. Optimize testing scripts to function at peak performance and maintain Bamboo servers. </li>
               </ul>               
               <h2>Canyons School District <span>IT Specialist - Sandy, UT - 2016-2018</span></h2>
               <ul>
