--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -89,7 +89,11 @@
 
             <dt>Experience</dt>
             <dd>
-            <h2>Companion Corp <span>Jr Automation engineer - Salt Lake City, UT - 2017-present</span></h2>
+            <h2>MRM//McCann <span>QA engineer - Salt Lake City, UT - 2019-present</span></h2>
+            <ul>
+                <li> Automation Engineer over multiple web apps for continuous integration and regression testing along with API and GUI automated testing. Utilize Python along with many testing tools, primarily Selenium, Appium, Bamboo, Jenkins, JIRA, Github, and Bitbucket. Optimize testing scripts to function at peak performance and maintain Bamboo servers. </li>
+              </ul> 
+            <h2>Companion Corp <span>Jr Automation engineer - Salt Lake City, UT - 2018-2019</span></h2>
             <ul>
                 <li> Automation Engineer over multiple web apps for continuous integration and regression testing along with API and GUI automated testing. Utilize Python along with many testing tools, primarily Selenium, Appium, Bamboo, Jenkins, JIRA, Github, and Bitbucket. Optimize testing scripts to function at peak performance and maintain Bamboo servers. </li>
               </ul>               
