--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -91,7 +91,7 @@
             <dd>
             <h2>MRM//McCann <span>QA engineer - Salt Lake City, UT - 2019-present</span></h2>
             <ul>
-                <li> Automation Engineer over multiple web apps for continuous integration and regression testing along with API and GUI automated testing. Utilize Python along with many testing tools, primarily Selenium, Appium, Bamboo, Jenkins, JIRA, Github, and Bitbucket. Optimize testing scripts to function at peak performance and maintain Bamboo servers. </li>
+                <li> Conduct manual and automated testing of web and mobile apps for global clients. Responsible for leading load testing efforts using mainly Locust and Python. Create test plans, test cases, and bug reports using JIRA. </li>
               </ul> 
             <h2>Companion Corp <span>Jr Automation engineer - Salt Lake City, UT - 2018-2019</span></h2>
             <ul>
