--- a/app/views/resume/view.html.erb
+++ b/app/views/resume/view.html.erb
@@ -89,9 +89,9 @@
 
             <dt>Experience</dt>
             <dd>
-            <h2>Banjo<span>QA engineer - Salt Lake City, UT - 2019-present</span></h2>
+            <h2>Banjo<span>QA engineer - Salt Lake City, UT - 2019-2020</span></h2>
             <ul>
-                <li> Conduct manual and automated testing of web and mobile app. Responsible for leading API testing efforts using Python. Create test plans and test cases in TestRail as well as bug reports and epics using JIRA. Test incoming signals with gRPC and Kafkacat. </li>
+                <li> Responsible for creating testing strategy for QA team and ensuring test coverage. Conducted manual and automated testing of web and mobile app. Responsible for leading API testing efforts. Created test plans and test cases in TestRail as well as bug reports and epics using JIRA. Tested incoming signals with gRPC and Kafkacat. </li>
               </ul> 
             <h2>Companion Corp <span>Jr Automation engineer - Salt Lake City, UT - 2018-2019</span></h2>
             <ul>
